--- a/working.html
+++ b/working.html
@@ -31,7 +31,7 @@
         <div class="colorlib-table-cell js-fullheight">
         <div class="row no-gutters">
         <div class="col-md-12 text-center">
-        <h1 class="mb-4"><a href="index.html" class="logo">Beckham Muff</a></h1>
+        <h1 class="mb-4"><a href="index.html" class="logo">Riddhiman Roy</a></h1>
         <ul>
         <li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
         <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
@@ -51,7 +51,7 @@
         <div class="row">
         <div class="col-md-12">
         <div class="colorlib-navbar-brand">
-        <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Beckham Muff</a>
+        <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Riddhiman Roy</a>
         </div>
         <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
         </div>
@@ -60,28 +60,50 @@
         </header>
         <!-- Header carousel -->
         <section class="home-slider owl-carousel js-fullheight">
-        <div class="slider-item js-fullheight">
-        <div class="overlay"></div>
-        <div class="container">
-        <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
-        <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-        <p><a href="#" class="scroll">Hello! I'm</a></p>
-        <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Beckham Muff</h1>
-        </div>
-        </div>
-        </div>
-        </div>
-        <div class="slider-item js-fullheight">
-        <div class="overlay"></div>
-        <div class="container">
-        <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
-        <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-        <p><a href="#" class="scroll">I'm from Berlin</a></p>
-        <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">A Web Designer</h1>
-        </div>
-        </div>
-        </div>
-        </div>
+          <div class="slider-item js-fullheight">
+            <div class="overlay"></div>
+              <div class="container">
+                <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
+                <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+                  <p><a href="#" class="scroll">Hello, I'm Riddhiman Roy</a></p>
+                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I am a global citizen</h1>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider-item js-fullheight">
+            <div class="overlay"></div>
+              <div class="container">
+                <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
+                <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+                  <p><a href="#" class="scroll">Hello, I'm Riddhiman Roy</a></p>
+                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I am a Student Engineer</h1>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider-item js-fullheight">
+            <div class="overlay"></div>
+              <div class="container">
+                <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
+                <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+                  <p><a href="#" class="scroll">Hello, I'm Riddhiman Roy</a></p>
+                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I am a global citizen</h1>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider-item js-fullheight">
+            <div class="overlay"></div>
+              <div class="container">
+                <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
+                <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+                  <p><a href="#" class="scroll">Hello, I'm Riddhiman Roy</a></p>
+                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I hope to bring humanity to space</h1>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
         
         <!-- About Section -->
@@ -94,7 +116,7 @@
         <div class="about-desc">
         <h1 class="bold-text">About</h1>
         <div class="p-5">
-        <h2 class="mb-5">Hi! I'm Beckham Muff</h2>
+        <h2 class="mb-5">Hi! I'm Riddhiman Roy</h2>
         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in.</p>
         <p><a href="#">Checkout my resume</a></p>
         <ul class="ftco-footer-social list-unstyled mt-4">
