--- a/working.html
+++ b/working.html
@@ -17,6 +17,7 @@
 <link rel="stylesheet" href="css/flaticon.css">
 <link rel="stylesheet" href="css/icomoon.css">
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">.scrollax-performance, .scrollax-performance *, .scrollax-performance *:before, .scrollax-performance *:after { pointer-events: none !important; -webkit-animation-play-state: paused !important; animation-play-state: paused !important; };</style><script type="text/javascript" charset="UTF-8" src="./common.js.download"></script><script type="text/javascript" charset="UTF-8" src="./util.js.download"></script><script type="text/javascript" charset="UTF-8" src="./AuthenticationService.Authenticate"></script></head>
 <body data-aos-easing="slide" data-aos-duration="800" data-aos-delay="0">
     <div class="KW_progressContainer">
@@ -24,27 +25,25 @@
         </div>
         </div>
         <div class="page">
-        <nav id="colorlib-main-nav" role="navigation">
-        <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
-        <div class="js-fullheight colorlib-table">
-        <div class="img" style="background-image: url(images/author-2.jpg);"></div>
-        <div class="colorlib-table-cell js-fullheight">
-        <div class="row no-gutters">
-        <div class="col-md-12 text-center">
-        <h1 class="mb-4"><a href="index.html" class="logo">Riddhiman Roy</a></h1>
-        <ul>
-        <li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
-        <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
-        <li><a href="services.html"><span><small>03</small>Services</span></a></li>
-        <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-        <li><a href="blog.html"><span><small>05</small>Blog</span></a></li>
-        <li><a href="contact.html"><span><small>06</small>Contact</span></a></li>
-        </ul>
-        </div>
-        </div>
-        </div>
-        </div>
-        </nav>
+          <nav id="colorlib-main-nav" role="navigation">
+          <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
+          <div class="js-fullheight colorlib-table">
+            <div class="img" style="background-image: url(images/author-2.jpg);"></div>
+              <div class="colorlib-table-cell js-fullheight">
+                <div class="row no-gutters">
+                <div class="col-md-12 text-center">
+                  <h1 class="mb-4"><a href="index.html" class="logo">Riddhiman Roy</a></h1>
+                  <ul>
+                    <li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
+                    <li><a href="resume.html"><span><small>02</small>Resume</span></a></li>
+                    <li><a href="experiences.html"><span><small>03</small>Experience</span></a></li>
+                    <li><a href="contact.html"><span><small>04</small>Contact</span></a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          </nav>
         <div id="colorlib-page">
         <header>
         <div class="container">
@@ -99,7 +98,7 @@
                 <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
                 <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                   <p><a href="#" class="scroll">Hello, I'm Riddhiman Roy</a></p>
-                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I hope to bring humanity to space</h1>
+                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I hope to take humanity to space</h1>
                 </div>
               </div>
             </div>
@@ -108,30 +107,30 @@
         
         <!-- About Section -->
         <section class="ftco-section about-section">
-        <div class="container">
-        <div class="row d-flex" data-scrollax-parent="true">
-        <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);" data-scrollax=" properties: { translateY: '-70%'}"></div>
-        <div class="col-md-2"></div>
-        <div class="col-md-6 wrap ftco-animate">
-        <div class="about-desc">
-        <h1 class="bold-text">About</h1>
-        <div class="p-5">
-        <h2 class="mb-5">Hi! I'm Riddhiman Roy</h2>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in.</p>
-        <p><a href="#">Checkout my resume</a></p>
-        <ul class="ftco-footer-social list-unstyled mt-4">
-        <li><a href="#"><span class="icon-twitter"></span></a></li>
-        <li><a href="#"><span class="icon-facebook"></span></a></li>
-        <li><a href="#"><span class="icon-instagram"></span></a></li>
-        </ul>
-        <h5>Contact me here!</h5>
-        <p>Email: <a href="#"><span class="__cf_email__" data-cfemail="81e3e4e2eae9e0ecc1e4ece0e8ed">[email&#160;protected]</span></a></p>
-        <p>Phone: <a href="#">(123)-456-789</a></p>
-        </div>
-        </div>
-        </div>
-        </div>
-        </div>
+          <div class="container">
+            <div class="row d-flex" data-scrollax-parent="true">
+              <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);" data-scrollax=" properties: { translateY: '-70%'}"></div>
+                <div class="col-md-2"></div>
+                  <div class="col-md-6 wrap ftco-animate">
+                    <div class="about-desc">
+                    <h1 class="bold-text">About</h1>
+                    <div class="p-5">
+                    <h2 class="mb-5">Hi! I'm Riddhiman Roy</h2>
+                    <p>.</p>
+                    <p><a href="resume.html">Checkout my resume</a></p>
+                    <ul class="ftco-footer-social list-unstyled mt-4">
+                      <li><a href="#"><i class="fab fa-github"></i></a></li>
+                      <li><a href="#"><i class="fa fa-linkedin-square" style="font-size:52px"></i></a></li>
+                      <li><a href="#"><i class="fa fa-instagram" style=" font-size:52px"></i></a></li>
+                    </ul>
+                    <h5>Reach me here!</h5>
+                    <p>Email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=riddhiman.roy2015@gmail.com"><span class="__cf_email__" data-cfemail="81e3e4e2eae9e0ecc1e4ece0e8ed">riddhiman.roy2015@gmail.com</span></a></p>
+                    <p>Phone: +1 (437) 987-4492</p>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
 
         <!-- Projects Highlights -->
