all icons added with links

--- a/working.html
+++ b/working.html
@@ -119,13 +119,13 @@
                     <p>.</p>
                     <p><a href="resume.html">Checkout my resume</a></p>
                     <ul class="ftco-footer-social list-unstyled mt-4">
-                      <li><a href="#"><i class="fab fa-github"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin-square" style="font-size:52px"></i></a></li>
-                      <li><a href="#"><i class="fa fa-instagram" style=" font-size:52px"></i></a></li>
+                      <li><a href="https://github.com/riddhimanroy1010"><i class="fa fa-github" style="font-size:52px"></i></a></li>
+                      <li><a href="linkedin.com/in/riddhiman-roy-0a76231b3"><i class="fa fa-linkedin-square" style="font-size:52px"></i></a></li>
+                      <li><a href="https://www.instagram.com/rroyv2.0/"><i class="fa fa-instagram" style=" font-size:52px"></i></a></li>
                     </ul>
                     <h5>Reach me here!</h5>
                     <p>Email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=riddhiman.roy2015@gmail.com"><span class="__cf_email__" data-cfemail="81e3e4e2eae9e0ecc1e4ece0e8ed">riddhiman.roy2015@gmail.com</span></a></p>
-                    <p>Phone: +1 (437) 987-4492</p>
+                    <p>Phone: +1 (437) 987 - 4492</p>
                     </div>
                 </div>
               </div>
