--- a/working.html
+++ b/working.html
@@ -65,7 +65,7 @@
                 <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
                 <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                   <p><a href="#" class="scroll">Hello, I'm Riddhiman Roy</a></p>
-                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I am a global citizen</h1>
+                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I am a student engineer</h1>
                 </div>
               </div>
             </div>
@@ -76,7 +76,7 @@
                 <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
                 <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                   <p><a href="#" class="scroll">Hello, I'm Riddhiman Roy</a></p>
-                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I am a Student Engineer</h1>
+                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I am a global citizen </h1>
                 </div>
               </div>
             </div>
@@ -87,7 +87,7 @@
                 <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
                 <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                   <p><a href="#" class="scroll">Hello, I'm Riddhiman Roy</a></p>
-                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I am a global citizen</h1>
+                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I design for sustainability and inclusivity</h1>
                 </div>
               </div>
             </div>
