new, larger image to fix pixellation, working fix for different window sizes and aspect ratios

--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
         <section class="ftco-section about-section">
           <div class="container">
             <div class="row d-flex" data-scrollax-parent="true">
-              <div class="col-md-4 author-img" style="background-image: url(image0.jpg);" data-scrollax=" properties: { translateY: '-50%'}"></div>
+              <div class="col-md-4 author-img" style="background-image: url(self.jpg);" data-scrollax=" properties: { translateY: '-50%'}"></div>
                 <div class="col-md-2"></div>
                   <div class="col-md-6 wrap ftco-animate">
                     <div class="about-desc">
                     <h1 class="bold-text">About</h1>
                     <div class="p-5">
                     <h2 class="mb-5">Hi! I'm Riddhiman Roy</h2>
-                    <p> I’ve lived in India, the US, Qatar and now Canada. Each has shaped my interests and diversified them. Having lived in India and Qatar, sustainability wasan integral part of our lives. Whether it was the limited resources of Qatar leading tonecessary conservation efforts or keeping my home country, India, clean through segregationprojects and sustainable development projects, sustainability became a clear interest of mine. Living in the US, I also became very interested in aerospace engineering .Seeing the advances in sustainable rocketry with reusable boosters, the SLS plans and rover launches to explore planets, it pushed me towards aerospace engineering as well.</p>
+                    <p> I’ve lived in India, the US, Qatar and now Canada. Each has shaped my interests and diversified them. Having lived in India and Qatar, sustainability wasan integral part of our lives. Whether it was the limited resources of Qatar leading tonecessary conservation efforts or keeping my home country, India, clean through segregation projects and sustainable development projects, sustainability became a clear interest of mine. Living in the US, I also became very interested in aerospace engineering .Seeing the advances in sustainable rocketry with reusable boosters, the SLS plans and rover launches to explore planets, it pushed me towards aerospace engineering as well.</p>
                     <p><a href="resume.html">Checkout my resume</a></p>
                     <h5>Reach me here!</h5>
                     <ul class="ftco-footer-social list-unstyled mt-4">
