finished navigation, modified style.css for img tag

--- a/index.html
+++ b/index.html
@@ -109,15 +109,16 @@
         <section class="ftco-section about-section">
           <div class="container">
             <div class="row d-flex" data-scrollax-parent="true">
-              <div class="col-md-4 author-img" style="background-image: url(self.jpg);" data-scrollax=" properties: { translateY: '-50%'}"></div>
+              <div class="col-md-4 author-img" data-scrollax=" properties: { translateY: '-70%'}">
+                <img src="self.jpg">
+              </div>
                 <div class="col-md-2"></div>
                   <div class="col-md-6 wrap ftco-animate">
                     <div class="about-desc">
                     <h1 class="bold-text">About</h1>
                     <div class="p-5">
                     <h2 class="mb-5">Hi! I'm Riddhiman Roy</h2>
-                    <p style="text-align:justify;"> I’ve lived in India, the US, Qatar and now Canada. Each has shaped my interests and diversified them. Having lived in India and Qatar, sustainability wasan integral part of our lives. Whether it was the limited resources of Qatar leading tonecessary conservation efforts or keeping my home country, India, clean through segregation projects and sustainable development projects, sustainability became a clear interest of mine. Living in the US, I also became very interested in aerospace engineering .Seeing the advances in sustainable rocketry with reusable boosters, the SLS plans and rover launches to explore planets, it pushed me towards aerospace engineering as well.</p>
-                    <p><a href="resume.html">Checkout my resume</a></p>
+                    <p style="text-align:justify;"> I’ve lived in India, the US, Qatar and now Canada. Each has shaped my interests and diversified them. Having lived in India and Qatar, sustainability wasan integral part of our lives. Whether it was the limited resources of Qatar leading tonecessary conservation efforts or keeping my home country, India, clean through segregation projects and sustainable development projects, sustainability became a clear interest of mine. Living in the US, I also became very interested in aerospace engineering. Seeing the advances in sustainable rocketry with reusable boosters, the SLS plans and rover launches to explore planets, it pushed me towards aerospace engineering as well.</p>
                     <h5>Reach me here!</h5>
                     <ul class="ftco-footer-social list-unstyled mt-4">
                       <li><a href="https://github.com/riddhimanroy1010"><span class="fa fa-github" style="font-size:45px"></span></a></li>
@@ -125,6 +126,7 @@
                       <li><a href="linkedin.com/in/riddhiman-roy-0a76231b3"><span class="fa fa-linkedin-square" style="font-size:45px"></span></a></li>
                       <li><a href="https://www.instagram.com/rroyv2.0/"><span class="fa fa-instagram" style=" font-size:45px"></span></a></li>
                     </ul>
+                    <p><a href="resume.html">Checkout my resume</a></p>
                     <p>Phone: +1 (437) 987 - 4492</p>
                     </div>
                 </div>
@@ -135,46 +137,40 @@
 
         <!-- Projects Highlights -->
         <section class="ftco-section">
-        <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
-        <div class="col-md-7 text-center heading-section ftco-animate">
-        <span>What i do</span>
-        <h2>My services</h2>
-        </div>
-        </div>
-        <div class="row">
-        <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-        <div class="media block-6 services p-3 py-4 d-block text-center">
-        <div class="icon mb-3"><span class="icon-layers"></span></div>
-        <div class="media-body">
-        <h3 class="heading">UI/UX Design</h3>
-        <h3 class="heading">Mobile App Design</h3>
-        <h3 class="heading">Responsive Design</h3>
-        </div>
-        </div>
-        </div>
-        <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-        <div class="media block-6 services p-3 py-4 d-block text-center">
-        <div class="icon mb-3"><span class="icon-gears"></span></div>
-        <div class="media-body">
-        <h3 class="heading">Product Strategy</h3>
-        <h3 class="heading">Design Sprints</h3>
-        <h3 class="heading">UX Strategy</h3>
-        </div>
-        </div>
-        </div>
-        <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-        <div class="media block-6 services p-3 py-4 d-block text-center">
-        <div class="icon mb-3"><span class="icon-code"></span></div>
-        <div class="media-body">
-        <h3 class="heading">HTML/CSS</h3>
-        <h3 class="heading">Prototyping</h3>
-        <h3 class="heading">User Testing</h3>
-        </div>
-        </div>
-        </div>
-        </div>
-        </div>
+          <div class="container">
+            <div class="row justify-content-center mb-5 pb-5">
+              <div class="col-md-7 text-center heading-section ftco-animate">
+                <span>Navigation</span>
+                <h1>Check out the rest of my site!</h1>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4 d-flex align-self-stretch ftco-animate">
+                <div class="media block-6 services p-3 py-4 d-block text-center">
+                  <div class="icon mb-3"><span class="fa fa-check-square-o"></span></div>
+                  <div class="media-body">
+                    <h2><a href = "experience.html">Experience</a></h2>
+                  </div>
+              </div>
+            </div>
+              <div class="col-md-4 d-flex align-self-stretch ftco-animate">
+                <div class="media block-6 services p-3 py-4 d-block text-center">
+                  <div class="icon mb-3"><span class="fa fa-file-pdf-o"></span></div>
+                  <div class="media-body">
+                    <h2><a href = "resume.html">Resume</a></h2>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 d-flex align-self-stretch ftco-animate">
+                <div class="media block-6 services p-3 py-4 d-block text-center">
+                  <div class="icon mb-3"><span class="fa fa-address-card-o"></span></div>
+                  <div class="media-body">
+                  <h2><a href = "contact.html">Contact me!</a></h2>
+                </div>
+              </div>
+            </div>
+            </div>
+          </div>
         </section>
         <section class="ftco-section">
         <div class="container">
