website structure live, resume page has resume embedded, all others complete with nav

--- a/contact.html
+++ b/contact.html
@@ -57,85 +57,9 @@
         </div>
         </div>
         </header>
-        <!-- Header carousel -->
-        <section class="home-slider owl-carousel js-fullheight">
-          <div class="slider-item js-fullheight">
-            <div class="overlay"></div>
-              <div class="container">
-                <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
-                <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                  <p><a href="#" class="scroll">Hello, I'm Riddhiman Roy</a></p>
-                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I am a student engineer</h1>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="slider-item js-fullheight">
-            <div class="overlay"></div>
-              <div class="container">
-                <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
-                <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                  <p><a href="#" class="scroll">Hello, I'm Riddhiman Roy</a></p>
-                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I am a global citizen </h1>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="slider-item js-fullheight">
-            <div class="overlay"></div>
-              <div class="container">
-                <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
-                <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                  <p><a href="#" class="scroll">Hello, I'm Riddhiman Roy</a></p>
-                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I design for sustainability and inclusivity</h1>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="slider-item js-fullheight">
-            <div class="overlay"></div>
-              <div class="container">
-                <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
-                <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                  <p><a href="#" class="scroll">Hello, I'm Riddhiman Roy</a></p>
-                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I hope to take humanity to space</h1>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
         
-        <!-- About Section -->
-        <section class="ftco-section about-section">
-          <div class="container">
-            <div class="row d-flex" data-scrollax-parent="true">
-              <div class="col-md-4 author-img" data-scrollax=" properties: { translateY: '-70%'}">
-                <img src="self.jpg">
-              </div>
-                <div class="col-md-2"></div>
-                  <div class="col-md-6 wrap ftco-animate">
-                    <div class="about-desc">
-                    <h1 class="bold-text">About</h1>
-                    <div class="p-5">
-                    <h2 class="mb-5">Hi! I'm Riddhiman Roy</h2>
-                    <p style="text-align:justify;"> I’ve lived in India, the US, Qatar and now Canada. Each has shaped my interests and diversified them. Having lived in India and Qatar, sustainability wasan integral part of our lives. Whether it was the limited resources of Qatar leading tonecessary conservation efforts or keeping my home country, India, clean through segregation projects and sustainable development projects, sustainability became a clear interest of mine. Living in the US, I also became very interested in aerospace engineering. Seeing the advances in sustainable rocketry with reusable boosters, the SLS plans and rover launches to explore planets, it pushed me towards aerospace engineering as well.</p>
-                    <h5>Reach me here!</h5>
-                    <ul class="ftco-footer-social list-unstyled mt-4">
-                      <li><a href="https://github.com/riddhimanroy1010"><span class="fa fa-github" style="font-size:45px"></span></a></li>
-                      <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=riddhiman.roy2015@gmail.com"><span class="material-icons" style=" font-size:45px">mail</span></a></li>
-                      <li><a href="linkedin.com/in/riddhiman-roy-0a76231b3"><span class="fa fa-linkedin-square" style="font-size:45px"></span></a></li>
-                      <li><a href="https://www.instagram.com/rroyv2.0/"><span class="fa fa-instagram" style=" font-size:45px"></span></a></li>
-                    </ul>
-                    <p><a href="resume.html">Checkout my resume</a></p>
-                    <p>Phone: +1 (437) 987 - 4492</p>
-                    </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
 
-        <!-- Projects Highlights -->
+        <!-- Navigation -->
         <section class="ftco-section">
           <div class="container">
             <div class="row justify-content-center mb-5 pb-5">
