modified bottom nav

--- a/resume.html
+++ b/resume.html
@@ -81,7 +81,7 @@
             <div class="row">
               <div class="col-md-4 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
-                  <div class="icon mb-3"><span class="fa fa-check-square-o"></span></div>
+                  <div class="icon mb-3"><a href = "experience.html"><span class="fa fa-check-square-o"></span></a></div>
                   <div class="media-body">
                     <h2><a href = "experience.html">Experience</a></h2>
                   </div>
@@ -89,7 +89,7 @@
             </div>
               <div class="col-md-4 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
-                  <div class="icon mb-3"><span class="fa fa-file-pdf-o"></span></div>
+                  <div class="icon mb-3"><a href = "resume.html"><span class="fa fa-file-pdf-o"></span></a></div>
                   <div class="media-body">
                     <h2><a href = "resume.html">Resume</a></h2>
                   </div>
@@ -97,7 +97,7 @@
               </div>
               <div class="col-md-4 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
-                  <div class="icon mb-3"><span class="fa fa-address-card-o"></span></div>
+                  <div class="icon mb-3"><a href = "contact.html"><span class="fa fa-address-card-o"></span></a></div>
                   <div class="media-body">
                   <h2><a href = "contact.html">Contact me!</a></h2>
                 </div>
