--- a/experience.html
+++ b/experience.html
@@ -61,41 +61,41 @@
 
         <!-- Navigation -->
         <section class="ftco-section">
-          <div class="container">
-            <div class="row justify-content-center mb-5 pb-5">
-              <div class="col-md-7 text-center heading-section ftco-animate">
-                <span>Navigation</span>
-                <h1>Where to next?</h1>
+            <div class="container">
+              <div class="row justify-content-center mb-5 pb-5">
+                <div class="col-md-7 text-center heading-section ftco-animate">
+                  <span>Navigation</span>
+                  <h1>Where to next?</h1>
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-                <div class="media block-6 services p-3 py-4 d-block text-center">
-                  <div class="icon mb-3"><span class="fa fa-check-square-o"></span></div>
-                  <div class="media-body">
-                    <h2><a href = "experience.html">Experience</a></h2>
+              <div class="row">
+                <div class="col-md-4 d-flex align-self-stretch ftco-animate">
+                  <div class="media block-6 services p-3 py-4 d-block text-center">
+                    <div class="icon mb-3"><a href = "experience.html"><span class="fa fa-check-square-o"></span></a></div>
+                    <div class="media-body">
+                      <h2><a href = "experience.html">Experience</a></h2>
+                    </div>
+                </div>
+              </div>
+                <div class="col-md-4 d-flex align-self-stretch ftco-animate">
+                  <div class="media block-6 services p-3 py-4 d-block text-center">
+                    <div class="icon mb-3"><a href = "resume.html"><span class="fa fa-file-pdf-o"></span></a></div>
+                    <div class="media-body">
+                      <h2><a href = "resume.html">Resume</a></h2>
+                    </div>
                   </div>
-              </div>
-            </div>
-              <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-                <div class="media block-6 services p-3 py-4 d-block text-center">
-                  <div class="icon mb-3"><span class="fa fa-file-pdf-o"></span></div>
-                  <div class="media-body">
-                    <h2><a href = "resume.html">Resume</a></h2>
+                </div>
+                <div class="col-md-4 d-flex align-self-stretch ftco-animate">
+                  <div class="media block-6 services p-3 py-4 d-block text-center">
+                    <div class="icon mb-3"><a href = "contact.html"><span class="fa fa-address-card-o"></span></a></div>
+                    <div class="media-body">
+                    <h2><a href = "contact.html">Contact me!</a></h2>
                   </div>
                 </div>
               </div>
-              <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-                <div class="media block-6 services p-3 py-4 d-block text-center">
-                  <div class="icon mb-3"><span class="fa fa-address-card-o"></span></div>
-                  <div class="media-body">
-                  <h2><a href = "contact.html">Contact me!</a></h2>
-                </div>
               </div>
             </div>
-            </div>
-          </div>
-        </section>
+          </section>
       
         <footer class="ftco-footer ftco-bg-dark ftco-section">
           <div class="container">
