--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           </div>
         </section>
 
-        <!-- Projects Highlights -->
+        <!-- Navigation -->
         <section class="ftco-section">
           <div class="container">
             <div class="row justify-content-center mb-5 pb-5">
@@ -147,7 +147,7 @@
             <div class="row">
               <div class="col-md-4 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
-                  <div class="icon mb-3"><span class="fa fa-check-square-o"></span></div>
+                  <div class="icon mb-3"><a href = "experience.html"><span class="fa fa-check-square-o"></span></a></div>
                   <div class="media-body">
                     <h2><a href = "experience.html">Experience</a></h2>
                   </div>
@@ -155,7 +155,7 @@
             </div>
               <div class="col-md-4 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
-                  <div class="icon mb-3"><span class="fa fa-file-pdf-o"></span></div>
+                  <div class="icon mb-3"><a href = "resume.html"><span class="fa fa-file-pdf-o"></span></a></div>
                   <div class="media-body">
                     <h2><a href = "resume.html">Resume</a></h2>
                   </div>
@@ -163,7 +163,7 @@
               </div>
               <div class="col-md-4 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
-                  <div class="icon mb-3"><span class="fa fa-address-card-o"></span></div>
+                  <div class="icon mb-3"><a href = "contact.html"><span class="fa fa-address-card-o"></span></a></div>
                   <div class="media-body">
                   <h2><a href = "contact.html">Contact me!</a></h2>
                 </div>
