new contact form

--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,34 @@
         </div>
         </header>
         
+        <section class="ftco-section contact-section col-md-12">
+          <div class="col-md-12">
+            <div class="container">
+              <form>
+                <div class="field" tabindex="1">
+                  <label for="username">
+                    <i class="far fa-user"></i>Your Name
+                  </label>
+                  <input name="username" type="text" placeholder="e.g. john doe" required>
+                </div>
+                <div class="field" tabindex="2">
+                  <label for="email">
+                    <i class="far fa-envelope"></i>Your Email
+                  </label>
+                  <input name="email" type="text" placeholder="email@domain.com" required>
+                </div>
+                <div class="field" tabindex="3">
+                  <label for="message">
+                    <i class="far fa-edit"></i>Your Message
+                  </label>
+                  <textarea name="message" placeholder="type here" required></textarea>
+                </div>
+                <button type="reset">Send Me Message</button>
+                </form>
+            </div>
+          </div>
+        </section>
+        #034ff4
 
         <!-- Navigation -->
         <section class="ftco-section">
@@ -96,7 +124,7 @@
             </div>
           </div>
         </section>
-      
+
         <footer class="ftco-footer ftco-bg-dark ftco-section">
           <div class="container">
           <div class="row mb-5 justify-content-center">
