--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0043)https://preview.colorlib.com/theme/beckham/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Riddhiman Roy</title>
+<title>Riddhiman Roy - Contact Me</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="./css" rel="stylesheet">
@@ -59,34 +59,103 @@
         </header>
         
         <section class="ftco-section contact-section col-md-12">
-          <div class="col-md-12">
             <div class="container">
-              <form>
-                <div class="field" tabindex="1">
-                  <label for="username">
-                    <i class="far fa-user"></i>Your Name
-                  </label>
-                  <input name="username" type="text" placeholder="e.g. john doe" required>
+              <div class="row justify-content-center">
+                <div class="col-md-6 text-center mb-5">
+                  <h2 class="heading-section">Contact me!</h2>
                 </div>
-                <div class="field" tabindex="2">
-                  <label for="email">
-                    <i class="far fa-envelope"></i>Your Email
-                  </label>
-                  <input name="email" type="text" placeholder="email@domain.com" required>
+              </div>
+              <div class="row justify-content-center">
+                <div class="col-md-12">
+                  <div class="wrapper">
+                    <div class="row mb-5">
+                      <div class="col-md-3">
+                        <div class="dbox w-100 text-center">
+                          <div class="icon d-flex align-items-center justify-content-center">
+                            <span class="fa fa-phone" style="font-size:45px"></span>
+                          </div>
+                          <div class="text">
+                            <p>+1 (437) 987-4492</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="dbox w-100 text-center">
+                          <div class="icon d-flex align-items-center justify-content-center">
+                            <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=riddhiman.roy2015@gmail.com"><span class="material-icons" style="font-size:45px">mail</span></a>
+                          </div>
+                          <div class="text">
+                            <p><span><a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=riddhiman.roy2015@gmail.com">riddhiman.roy2015@gmail.com</a</span></p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="dbox w-100 text-center">
+                          <div class="icon d-flex align-items-center justify-content-center">
+                            <a href="riddhimanroy.com"><span class="fa fa-globe" style="font-size:45px"></span></a>
+                          </div>
+                          <div class="text">
+                            <p><span><a href="riddhimanroy.com">riddhimanroy.com</a></span></p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="dbox w-100 text-center">
+                          <div class="icon d-flex align-items-center justify-content-center">
+                           <a href="https://www.instagram.com/rroyv2.0/"><span class="fa fa-instagram" style="font-size:45px"></span></a>
+                          </div>
+                          <div class="text">
+                            <p><span><a href="https://www.instagram.com/rroyv2.0/">rroyv2.0<a></a></span></p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row no-gutters">
+                      <div class="col-md-12">
+                        <div class="contact-wrap w-100 p-md-2 p-4">
+                          <div id="form-message-warning" class="mb-6"></div> 
+                          <form method="POST" id="contactForm" name="contactForm" class="contactForm">
+                            <div class="row">
+                              <div class="col-md-12">
+                                <div class="form-group">
+                                  <label class="label" for="name">Full Name</label>
+                                  <input type="text" class="form-control" name="name" id="name" placeholder="Name">
+                                </div>
+                              </div>
+                              <div class="col-md-12"> 
+                                <div class="form-group">
+                                  <label class="label" for="email">Email Address</label>
+                                  <input type="email" class="form-control" name="email" id="email" placeholder="example@mail.com">
+                                </div>
+                              </div>
+                              <div class="col-md-12">
+                                <div class="form-group">
+                                  <label class="label" for="subject">Subject</label>
+                                  <input type="text" class="form-control" name="subject" id="subject" placeholder="What's this about?">
+                                </div>
+                              </div>
+                              <div class="col-md-12">
+                                <div class="form-group">
+                                  <label class="label" for="#">Message</label>
+                                  <textarea name="message" class="form-control" id="message" cols="30" rows="4" placeholder="Say Something!"></textarea>
+                                </div>
+                              </div>
+                              <div class="col-md-12 align">
+                                <div class="form-group align-items-center">
+                                  <input type="submit" value="Send Message" class="btn btn-primary">
+                                  <div class="submitting"></div>
+                                </div>
+                              </div>
+                            </div>
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="field" tabindex="3">
-                  <label for="message">
-                    <i class="far fa-edit"></i>Your Message
-                  </label>
-                  <textarea name="message" placeholder="type here" required></textarea>
-                </div>
-                <button type="reset">Send Me Message</button>
-                </form>
+              </div>
             </div>
-          </div>
         </section>
-        #034ff4
-
         <!-- Navigation -->
         <section class="ftco-section">
           <div class="container">
