--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0043)https://preview.colorlib.com/theme/beckham/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Riddhiman Roy</title>
+<title>Riddhiman Roy - Title</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="./css" rel="stylesheet">
