--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
                       <div class="col-md-12">
                         <div class="contact-wrap w-100 p-md-2 p-4">
                           <div id="form-message-warning" class="mb-6"></div> 
-                          <form method="POST" id="contactForm" name="contactForm" class="contactForm">
+                          <form method="POST" id="contactForm" name="contactForm" class="contactForm" action = "https://formspree.io/f/mvodkvpk">
                             <div class="row">
                               <div class="col-md-12">
                                 <div class="form-group">
@@ -140,7 +140,7 @@
                                   <textarea name="message" class="form-control" id="message" cols="30" rows="4" placeholder="Say Something!"></textarea>
                                 </div>
                               </div>
-                              <div class="col-md-12 align">
+                              <div class="col-md-4">
                                 <div class="form-group align-items-center">
                                   <input type="submit" value="Send Message" class="btn btn-primary">
                                   <div class="submitting"></div>
