--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
             <div class="container">
               <div class="row justify-content-center">
                 <div class="col-md-6 text-center mb-5">
-                  <h2 class="heading-section">Contact me!</h2>
+                  <h1 class="mb-3 bold-text"> Contact me! </h1>
                 </div>
               </div>
               <div class="row justify-content-center">
