--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <h1 class="bold-text">About</h1>
                     <div class="p-5">
                     <h2 class="mb-5">Hi! I'm Riddhiman Roy</h2>
-                    <p style="text-align:justify;"> I’ve lived in India, the US, Qatar and now Canada. Each has shaped my interests and diversified them. Having lived in India and Qatar, sustainability wasan integral part of our lives. Whether it was the limited resources of Qatar leading tonecessary conservation efforts or keeping my home country, India, clean through segregation projects and sustainable development projects, sustainability became a clear interest of mine. Living in the US, I also became very interested in aerospace engineering. Seeing the advances in sustainable rocketry with reusable boosters, the SLS plans and rover launches to explore planets, it pushed me towards aerospace engineering as well.</p>
+                    <p style="text-align:justify;"> I’ve lived in India, the US, Qatar and now Canada. Each has shaped my interests and diversified them. Having lived in India and Qatar, sustainability was an integral part of my life. Whether it was the limited resources of Qatar leading to necessary conservation efforts or keeping my home country, India, clean through segregation projects and sustainable development projects, sustainability became a clear interest of mine. Living in the US, I also became very interested in aerospace engineering. Seeing the advances in sustainable rocketry with reusable boosters, the SLS plans and rover launches to explore planets, it pushed me towards aerospace engineering as well.</p>
                     <h5>Reach me here!</h5>
                     <ul class="ftco-footer-social list-unstyled mt-4">
                       <li><a href="https://github.com/riddhimanroy1010"><span class="fa fa-github" style="font-size:45px"></span></a></li>
@@ -126,7 +126,6 @@
                       <li><a href="linkedin.com/in/riddhiman-roy-0a76231b3"><span class="fa fa-linkedin-square" style="font-size:45px"></span></a></li>
                       <li><a href="https://www.instagram.com/rroyv2.0/"><span class="fa fa-instagram" style=" font-size:45px"></span></a></li>
                     </ul>
-                    <p><a href="resume.html">Checkout my resume</a></p>
                     <p>Phone: +1 (437) 987 - 4492</p>
                     </div>
                 </div>
