--- a/contact.html
+++ b/contact.html
@@ -119,19 +119,19 @@
                               <div class="col-md-12">
                                 <div class="form-group">
                                   <label class="label" for="name">Full Name</label>
-                                  <input type="text" class="form-control" name="name" id="name" placeholder="Name">
+                                  <input type="text" class="form-control" name="name" id="name" placeholder="Name" required = "">
                                 </div>
                               </div>
                               <div class="col-md-12"> 
                                 <div class="form-group">
                                   <label class="label" for="email">Email Address</label>
-                                  <input type="email" class="form-control" name="email" id="email" placeholder="example@mail.com">
+                                  <input type="email" class="form-control" name="email" id="email" placeholder="example@mail.com" required = "">
                                 </div>
                               </div>
                               <div class="col-md-12">
                                 <div class="form-group">
                                   <label class="label" for="subject">Subject</label>
-                                  <input type="text" class="form-control" name="subject" id="subject" placeholder="What's this about?">
+                                  <input type="text" class="form-control" name="subject" id="subject" placeholder="What's this about?" required = "">
                                 </div>
                               </div>
                               <div class="col-md-12">
@@ -206,7 +206,8 @@
               <li class="ftco-animate"><a href="https://www.instagram.com/rroyv2.0/"><span class="fa fa-instagram" style=" font-size:45px"></span></a></li>
             </ul>
           </div>
-          <p> Riddhiman Roy 2021</p>
+          <p> Riddhiman Roy</p>
+          <p> This website is still under development. If you see any bugs, send them to me via the contact form.</p>
         </footer>
         
         <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
