new footer text

--- a/resume.html
+++ b/resume.html
@@ -119,7 +119,8 @@
               <li class="ftco-animate"><a href="https://www.instagram.com/rroyv2.0/"><span class="fa fa-instagram" style=" font-size:45px"></span></a></li>
             </ul>
           </div>
-          <p> Riddhiman Roy 2021</p>
+          <p> Riddhiman Roy</p>
+          <p> This website is still under development. If you see any bugs, send them to me via the contact form.</p>
         </footer>
         
         <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
