new website redirect

--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
                             <a href="riddhimanroy.com"><span class="fa fa-globe" style="font-size:45px"></span></a>
                           </div>
                           <div class="text">
-                            <p><span><a href="riddhimanroy.com">riddhimanroy.com</a></span></p>
+                            <p><span><a href="riddhimanroy1010.github.io/index.html">riddhimanroy.com</a></span></p>
                           </div>
                         </div>
                       </div>
