--- a/contact.html
+++ b/contact.html
@@ -140,9 +140,9 @@
                                   <textarea name="message" class="form-control" id="message" cols="30" rows="4" placeholder="Say Something!"></textarea>
                                 </div>
                               </div>
-                              <div class="col-md-4">
-                                <div class="form-group align-items-center">
-                                  <input type="submit" value="Send Message" class="btn btn-primary">
+                              <div class="col-md-12">
+                                <div class="form-group">
+                                  <input type="submit" value="Send Message" class="btn">
                                   <div class="submitting"></div>
                                 </div>
                               </div>
