--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@
           </div>
           <div class="container">
             <div class="row d-flex" data-scrollax-parent="true">
-              <iframe src="riddhimanroy-resume-m21.pdf" width="100%" height="900px"></iframe>
+              <iframe src="rroy-resume-jun21.pdf" width="100%" height="900px"></iframe>
             </div>
           </div>  
         </section>
