fixed broken linkedin link

--- a/resume.html
+++ b/resume.html
@@ -115,7 +115,7 @@
             <ul class="ftco-footer-social list-unstyled">
               <li class="ftco-animate"><a href="https://github.com/riddhimanroy1010"><span class="fa fa-github" style="font-size:45px"></span></a></li>
               <li class="ftco-animate"><a href="https://mail.google.com/mail/?view=cm&fs=1&to=riddhiman.roy2015@gmail.com"><span class="material-icons" style=" font-size:45px">mail</span></a></li>
-              <li class="ftco-animate"><a href="https://www.instagram.com/rroyv2.0/"><span class="fa fa-linkedin-square" style=" font-size:45px"></span></a></li>
+              <li class="ftco-animate"><a href="https://linkedin.com/in/riddhiman-roy-0a76231b3"><span class="fa fa-linkedin-square" style=" font-size:45px"></span></a></li>
               <li class="ftco-animate"><a href="https://www.instagram.com/rroyv2.0/"><span class="fa fa-instagram" style=" font-size:45px"></span></a></li>
             </ul>
           </div>
