--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                     <h2 class="mb-5">Hi! I'm Riddhiman Roy</h2>
                     <p style="text-align:justify;">                     
                       I’ve lived in India, the US, Qatar and now Canada. Each has shaped my interests and diversified them. Having lived in India and Qatar, sustainability was an integral part of my life. Whether it was the limited natural resources of Qatar leading to necessary conservation efforts or keeping my home country, India, clean through waste segregation projects and sustainable development projects, sustainability became a clear interest of mine. Living in the US, I also became very interested in aerospace engineering. Seeing the advances in sustainable rocketry with reusable boosters, the SLS plans and rover launches to explore planets, it pushed me towards aerospace engineering as well.
-
+                      </p>
+                      <p style="text-align: justify;">
                       As a student engineer, I seek to solve problems that sustainably help us explore the vast beauty of space. I develop skills that make me a better problem solver, team member, critical thinker, prototyper, developer and designer.
                     </p>
                     <h5>Reach me here!</h5>
