font changes to title

--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,9 @@
         
         <section class="ftco-section about-section">
           <div class="row justify-content-center mb-5 pb-5">
-            <h1 class="mb-3 bold-text"> Resume </h1>
+            <div class = "col md-7 text-center heading-section ftco-animate">
+                <h2 class="mb-3 bold-text"> Resume </h2>
+            </div>
           </div>
           <div class="container">
             <div class="row d-flex" data-scrollax-parent="true">
