--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,9 @@
             <div class="container">
               <div class="row justify-content-center">
                 <div class="col-md-6 text-center mb-5">
-                  <h1 class="mb-3 bold-text"> Contact me! </h1>
+                  <div class = "col md-7 text-center heading-section ftco-animate">
+                    <h2 class="mb-3 bold-text"> Contact me! </h2>
+                  </div>
                 </div>
               </div>
               <div class="row justify-content-center">
