--- a/index.html
+++ b/index.html
@@ -109,10 +109,9 @@
         <section class="ftco-section about-section">
           <div class="container">
             <div class="row d-flex" data-scrollax-parent="true">
-              <div class="col-md-4 author-img" data-scrollax=" properties: { translateY: '-70%'}">
-                <img src="self.jpg">
+              <div class="col-md-5" data-scrollax=" properties: { translateY: '-70%'}">
+                <img src="self.jpg" style = "width: 100%; height: auto">
               </div>
-                <div class="col-md-2"></div>
                   <div class="col-md-6 wrap ftco-animate">
                     <div class="about-desc">
                     <h1 class="bold-text">About</h1>
