fixed spacing between selfimg and intro text

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
               <div class="col-md-5" data-scrollax=" properties: { translateY: '-70%'}">
                 <img src="self.jpg" style = "width: 100%; height: auto">
               </div>
+              <div class = "col-md-1"></div>
                   <div class="col-md-6 wrap ftco-animate">
                     <div class="about-desc">
                     <h1 class="bold-text">About</h1>
