--- a/experience.html
+++ b/experience.html
@@ -82,7 +82,7 @@
           </div>
           <div class = "row no-gutters">
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-              <div class="d-flex justify-content-center align-items-center" data-scrollax=" properties: { translateY: '-30%'}">
+              <div class="d-flex order-2 justify-content-center align-items-center" data-scrollax=" properties: { translateY: '-30%'}">
                 <img src = "img/UTATpic.jpg" style = "width: 100%; height: auto">
               </div>
                 <div class="text">
