removed prof names

--- a/experience.html
+++ b/experience.html
@@ -75,7 +75,7 @@
                 <div class="text">
                 <h4 class="subheading">Development</h4>
                 <h2 class="heading"><a href="portfolio-single.html">Predicting GHGs of Fleets of Light Vehicles Throughout Their Lifecycles</a></h2>
-                <p>Working with Professors Posen and Maclean under a research grant as part of ESROP-UofT, I am working on FLAME (Fleet Life Cycle Assessment and Material-Flow Estimation), a model to predict the greenhouse gasses emitted by vehicles in every stage of their lives. My role is to help port the code from R to Python, making future development easier. It involves me emulating the R environment structure and  various R data structures in Python</p>
+                <p>Working with professors in the Department of Civil and Mineral Engineering at UofT under a research grant as part of ESROP-UofT, I am working on FLAME (Fleet Life Cycle Assessment and Material-Flow Estimation), a model to predict the greenhouse gasses emitted by vehicles in every stage of their lives. My role is to help port the code from R to Python, making future development easier. It involves me emulating the R environment structure and  various R data structures in Python</p>
                 <p><a href="https://github.com/riddhimanroy1010/flame_us_python_port">View Project</a></p>
                 </div>
             </div>
