--- a/experience.html
+++ b/experience.html
@@ -73,23 +73,21 @@
                 <img src = "img/FLAMEpic.jpg" style = "width: 100%; height: auto">
               </div>
                 <div class="text">
-                <h4 class="subheading">Development</h4>
-                <h2 class="heading"><a href="portfolio-single.html">Predicting GHGs of Fleets of Light Vehicles Throughout Their Lifecycles</a></h2>
-                <p>Working with professors in the Department of Civil and Mineral Engineering at UofT under a research grant as part of ESROP-UofT, I am working on FLAME (Fleet Life Cycle Assessment and Material-Flow Estimation), a model to predict the greenhouse gasses emitted by vehicles in every stage of their lives. My role is to help port the code from R to Python, making future development easier. It involves me emulating the R environment structure and  various R data structures in Python</p>
-                <p><a href="https://github.com/riddhimanroy1010/flame_us_python_port">View Project</a></p>
+                  <h4 class="subheading">Development</h4>
+                  <h2 class="heading"><a href="portfolio-single.html">Predicting GHGs of Fleets of Light Vehicles Throughout Their Lifecycles</a></h2>
+                  <p>Working with professors in the Department of Civil and Mineral Engineering at UofT under a research grant as part of ESROP-UofT, I am working on FLAME (Fleet Life Cycle Assessment and Material-Flow Estimation), a model to predict the greenhouse gasses emitted by vehicles in every stage of their lives. My role is to help port the code from R to Python, making future development easier. It involves me emulating the R environment structure and  various R data structures in Python.</p>
+                  <p><a href="https://github.com/riddhimanroy1010/flame_us_python_port">View Project</a></p>
                 </div>
             </div>
-          </div>
-          <div class = "row no-gutters">
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
               <div class="d-flex order-2 justify-content-center align-items-center" data-scrollax=" properties: { translateY: '-30%'}">
                 <img src = "img/UTATpic.jpg" style = "width: 100%; height: auto">
               </div>
                 <div class="text">
-                <h4 class="subheading">Rocketry</h4>
-                <h2 class="heading"><a href="portfolio-single.html">Project DarkMatter: Rocket Flight Simulator</a></h2>
-                <p>As part of the UofT Aerospace Team's (UTAT) propulsion team working, my team and I are developing the next version of the rocket flight simulator that will be used by UTAT. Originally in MATLAB, our model will make use of RocketCEA, a python library that wraps NASA CEA (Chemical Equilibruim with Applications) using a Fortran compiler in a Linux terminal in Windows.</p>
-                <p>Preview coming soon when the repository becomes public!</a></p>
+                  <h4 class="subheading">Rocketry</h4>
+                  <h2 class="heading"><a href="portfolio-single.html">Project DarkMatter: Rocket Flight Simulator</a></h2>
+                  <p>As part of the UofT Aerospace Team's (UTAT) propulsion team working, my team and I are developing the next version of the rocket flight simulator that will be used by UTAT. Originally in MATLAB, our model will make use of RocketCEA, a python library that wraps NASA CEA (Chemical Equilibruim with Applications) using a Fortran compiler in a Linux terminal in Windows.</p>
+                  <p>Preview coming soon when the repository becomes public!</a></p>
                 </div>
             </div>
           </div>
