--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <!-- saved from url=(0043)https://preview.colorlib.com/theme/beckham/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 <title>Riddhiman Roy - Home</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -87,7 +89,7 @@
                 <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
                 <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                   <p><a href="#" class="scroll">Hello, I'm Riddhiman Roy</a></p>
-                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I design for sustainability and inclusivity</h1>
+                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}"style="font-size:vw;">I strive for elegant design</h1>
                 </div>
               </div>
             </div>
@@ -98,7 +100,7 @@
                 <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
                 <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                   <p><a href="#" class="scroll">Hello, I'm Riddhiman Roy</a></p>
-                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">I hope to take humanity to space</h1>
+                  <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}" style="font-size:vw;">I hope to help bring humanity to space</h1>
                 </div>
               </div>
             </div>
