changed file structure

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="container">
             <div class="row d-flex" data-scrollax-parent="true">
               <div class="col-md-5" data-scrollax=" properties: { translateY: '-70%'}">
-                <img src="self.jpg" style = "width: 100%; height: auto">
+                <img src="img/self.jpg" style = "width: 100%; height: auto">
               </div>
               <div class = "col-md-1"></div>
                   <div class="col-md-6 wrap ftco-animate">
