--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
           </div>
           </nav>
         <div id="colorlib-page">
-        <header>
+        <header style="position: fixed; background-color: rgba(0, 0, 0, 0.115); ">
         <div class="container">
         <div class="row">
         <div class="col-md-12">
