--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
         </div>
         </div>
         </div>
-        </header>
+        </header style="position: fixed; background-color: rgba(0, 0, 0, 0.115); ">
         
         <section class="ftco-section about-section">
           <div class="row justify-content-center mb-5 pb-5">
