--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <header style="position: fixed; background-color: rgba(0, 0, 0, 0.115); ">
         <div class="container">
         <div class="row">
-        <div class="col-md-12" style ="position: fixed; top: 0; width: 100%; background-color: rgba(0, 0, 0, 0.5);">
+        <div class="col-md-12">
         <div class="colorlib-navbar-brand">
         <a class="colorlib-logo" href="index.html">Riddhiman Roy</a>
         </div>
