forgot nav bar changes

--- a/resume.html
+++ b/resume.html
@@ -49,7 +49,7 @@
           </div>
           </nav>
         <div id="colorlib-page">
-        <header>
+        <header style="position: fixed; background-color: #121212; opacity: 100%;">
         <div class="container">
         <div class="row">
         <div class="col-md-12">
@@ -60,7 +60,7 @@
         </div>
         </div>
         </div>
-        </header style="position: fixed; background-color: #121212; opacity: 100%; ">
+        </header>
         
         <section class="ftco-section about-section">
           <div class="row justify-content-center mb-5 pb-5">
